[BE] - Added path alias.

--- a/be-app/tsconfig.json
+++ b/be-app/tsconfig.json
@@ -11,7 +11,8 @@
     "paths": {
       "@/*": ["./*"],
       "@/routes/*": ["src/routes/*"],
-      "@/types/*": ["src/types/*"]
+      "@/types/*": ["src/types/*"],
+      "@/utils/*": ["src/utils/*"]
     }
   },
   "include": ["src/**/*.ts"],
