--- a/be-app/package.json
+++ b/be-app/package.json
@@ -10,14 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
-    "dotenv": "^16.0.3"
+    "@types/ws": "^8.5.10",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
-    "cors": "^2.8.5",
     "@types/express": "^4.17.21",
+    "cors": "^2.8.5",
     "ts-node": "^10.9.2",
     "tsx": "^3.12.7",
     "typescript": "^5.3.3"
