[FE] - Added more path alias.

--- a/fe-app/tsconfig.json
+++ b/fe-app/tsconfig.json
@@ -23,7 +23,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@components/*": ["src/components/*"]
+      "@components/*": ["src/components/*"],
+      "@routes/*": ["src/components/routes/*"]
     }
   },
   "include": ["src"],
