--- a/be-app/package.json
+++ b/be-app/package.json
@@ -15,10 +15,12 @@
     "@types/ws": "^8.5.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "uuid": "^9.0.1",
     "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.7",
     "cors": "^2.8.5",
     "ts-node": "^10.9.2",
     "tsx": "^3.12.7",
